--- a/TMS.WebUI/Views/Employee/Create.cshtml
+++ b/TMS.WebUI/Views/Employee/Create.cshtml
@@ -1,11 +1,41 @@
-﻿@model TMS.Application.Employees.Queries.GetEmployeeDetail.EmployeeDetailVm
+﻿@using TMS.WebUI.Common;
+@model TMS.Application.Employees.Queries.GetEmployeeDetail.EmployeeDetailVm
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Employee";
 }
+<div class="breadcrumbs">
+    <a asp-controller="Home" asp-action="Index">Home</a> >
+    <a asp-controller="Employee" asp-action="Index">Employees</a> >
+    <span>Add Employee</span>
+</div>
 
-<h1>Create</h1>
+<h1>Add Employee</h1>
 
-@foreach(var item in @Model.UserRoles)
-{
-    <span>@item.Value</span> <span>@item.Name</span><br/>
-}
+<form asp-controller="Employee" asp-action="Create" method="post">
+    <div>
+        <label asp-for="ShortName" class="control-label"></label>
+        <input asp-for="ShortName" class="form-control" />
+        <span asp-validation-for="ShortName" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="FullName" class="control-label"></label>
+        <input asp-for="FullName" class="form-control" />
+        <span asp-validation-for="FullName" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Email" class="control-label"></label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Password" class="control-label"></label>
+        <input asp-for="Password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="RoleId" class="control-label"></label>
+        <select asp-for="RoleId" asp-items="@Model.UserRoles.ToSelectList()"></select>
+        <span asp-validation-for="RoleId" class="text-danger"></span>
+    </div>
+    <input class="btn" type="submit" value="Add" />
+</form>
