--- a/TMS.WebUI/Views/Employee/Index.cshtml
+++ b/TMS.WebUI/Views/Employee/Index.cshtml
@@ -1,18 +1,28 @@
 ﻿@model TMS.Application.Employees.Queries.GetEmployeeList.EmployeeListVm;
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "All Employees";
 }
-<h1>Index</h1>
-<table>
-    @foreach(var item in Model.Employees)
+
+<div class="breadcrumbs">
+    <a asp-controller="home" asp-action="index">Home</a> >
+    <span>Employee list</span>
+</div>
+
+<h1>Employees</h1>
+
+<table class="table">
+    <tr><td>ShortName</td><td>FullName</td><td>Role</td></tr>
+    @foreach (var item in Model.Employees)
     {
         <tr>
-            <td>@item.EmployeeId</td>
             <td>@item.ShortName</td>
-            <td>@item.FullName</td>
+            <td><a asp-controller="Employee" asp-action="Detailed" asp-route-id="@item.EmployeeId">@item.FullName</a></td>
             <td>@item.RoleName</td>
-            <td>@item.Email</td>
-            <td>@item.Active</td>
         </tr>
     }
 </table>
+
+@if (User.IsInRole("Admin"))
+{
+    <a class="btn task-add noselect" asp-controller="Staff" asp-action="Create">New Employee</a>
+}
