--- a/TMS.WebUI/Views/Employee/Index.cshtml
+++ b/TMS.WebUI/Views/Employee/Index.cshtml
@@ -16,7 +16,7 @@
     {
         <tr>
             <td>@item.ShortName</td>
-            <td><a asp-controller="Employee" asp-action="Detailed" asp-route-id="@item.EmployeeId">@item.FullName</a></td>
+            <td><a asp-controller="Employee" asp-action="Detailed" asp-route-id="@item.Id">@item.FullName</a></td>
             <td>@item.RoleName</td>
         </tr>
     }
