--- a/TMS.WebUI/Views/Home/Index.cshtml
+++ b/TMS.WebUI/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Homepage";
 }
-
-<h1>Index</h1>
+<h1>Homepage</h1>
+<div><a asp-controller="Employee">Сотрудники</a></div>
