Added reference to issue list

--- a/TMS.WebUI/Views/Home/Index.cshtml
+++ b/TMS.WebUI/Views/Home/Index.cshtml
@@ -2,4 +2,5 @@
     ViewData["Title"] = "Homepage";
 }
 <h1>Homepage</h1>
+<div><a asp-controller="Issue">Задачи</a></div>
 <div><a asp-controller="Employee">Сотрудники</a></div>
