--- a/TMS.WebUI/Views/Issue/Detailed.cshtml
+++ b/TMS.WebUI/Views/Issue/Detailed.cshtml
@@ -5,8 +5,8 @@
 
 <div class="breadcrumbs">
     <a asp-controller="Home" asp-action="Index">Home</a> >
-    <a asp-controller="Issue" asp-action="Index">Tasks</a> >
-    <span>Task details</span>
+    <a asp-controller="Issue" asp-action="Index">Issues</a> >
+    <span>Issue details</span>
 </div>
 
 <h1>Issue# @Model.Id</h1>
