--- a/TMS.WebUI/Views/Issue/Edit.cshtml
+++ b/TMS.WebUI/Views/Issue/Edit.cshtml
@@ -26,26 +26,23 @@
         <label asp-for="AssigneeId" class="control-label"></label>
         <select asp-for="AssigneeId" asp-items="@Model.Employees.ToSelectList(Model.AssigneeId)"></select>
     </div>
-
     <div>
         <label asp-for="ReporterId" class="control-label"></label>
         <select asp-for="ReporterId" asp-items="@Model.Employees.ToSelectList(Model.ReporterId)"></select>
     </div>
-
     <div>
         <label asp-for="Priority" class="control-label"></label>
         <select asp-for="Priority" asp-items="@Model.IssuePriorityLevels.ToSelectList(Model.Priority)"></select>
     </div>
-
     <div>
         <label asp-for="Status" class="control-label"></label>
         <select asp-for="Status" asp-items="@Model.IssueStatuses.ToSelectList(Model.Status)"></select>
     </div>
-    <input type="hidden" asp-for="Id" value="@Model.Id" />
+    <input id="Update_Id" asp-for="Id" />
     <input class="btn" type="submit" value="Update" />
 </form>
 
 <form asp-controller="Issue" asp-action="Delete" method="post">
-    <input type="hidden" asp-for="Id" value="@Model.Id" />
+    <input id="Delete_Id" asp-for="Id" />
     <input class="btn" type="submit" value="Remove" />
 </form>
