--- a/TMS.WebUI/Views/Employee/Edit.cshtml
+++ b/TMS.WebUI/Views/Employee/Edit.cshtml
@@ -34,9 +34,14 @@
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div>
-        <label asp-for="RoleId" class="control-label"></label>
-        <select asp-for="RoleId" asp-items="@Model.UserRoles.ToSelectList()"></select>
-        <span asp-validation-for="RoleId" class="text-danger"></span>
+        <label asp-for="Active" class="control-label"></label>
+        <input asp-for="Active" class="form-control" />
+        <span asp-validation-for="Active" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Role" class="control-label"></label>
+        <select asp-for="Role" asp-items="@Model.UserRoles.ToSelectList()"></select>
+        <span asp-validation-for="Role" class="text-danger"></span>
     </div>
     <input id="Update_Id" asp-for="Id" />
     <input class="btn" type="submit" value="Update" />
