--- a/TMS.WebUI/Views/Employee/Index.cshtml
+++ b/TMS.WebUI/Views/Employee/Index.cshtml
@@ -24,5 +24,5 @@
 
 @if (User.IsInRole("Admin"))
 {
-    <a class="btn task-add noselect" asp-controller="Staff" asp-action="Create">New Employee</a>
+    <a class="btn task-add noselect" asp-controller="Employee" asp-action="Create">New Employee</a>
 }
