--- a/TMS.WebUI/Views/Issue/Index.cshtml
+++ b/TMS.WebUI/Views/Issue/Index.cshtml
@@ -24,7 +24,7 @@
             <td><a asp-controller="Issue" asp-action="Detailed" asp-route-id="@item.Id">@item.Name</a></td>
             <td>@item.AssigneeName</td>
             <td>@item.ReporterName</td>
-            <td class="task-priority-@item.PriorityName.">@item.PriorityName</td>
+            <td class="task-priority-@item.PriorityName">@item.PriorityName</td>
             <td class="task-status-@item.StatusName">@item.StatusName</td>
         </tr>
     }
