Issue create razor page added

--- a/TMS.WebUI/Pages/Issues/Index.cshtml
+++ b/TMS.WebUI/Pages/Issues/Index.cshtml
@@ -41,4 +41,4 @@
         }
     }
 </table>
-<a class="btn task-add noselect" asp-controller="Issue" asp-action="Create">New issue</a>
+<a class="btn task-add noselect" asp-page="Create">New issue</a>
