--- a/TMS.WebUI/Pages/Index.cshtml
+++ b/TMS.WebUI/Pages/Index.cshtml
@@ -6,4 +6,4 @@
 
 <h1>TMS Homepage</h1>
 <div><a href="/Issues">Задачи</a></div>
-<div><a asp-controller="Employee">Сотрудники</a></div>
+<div><a href="/Employees">Сотрудники</a></div>
