Persistence layer separated from Infrastructure layer

--- a/TMS.WebUI/Pages/Shared/_LoginPartial.cshtml
+++ b/TMS.WebUI/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using TMS.Infrastructure.Identity
+@using TMS.Persistence.Identity
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
