--- a/TMS.WebUI/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/TMS.WebUI/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using TMS.WebUI.Areas.Identity
 @using TMS.WebUI.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using TMS.Infrastructure.Identity
+@using TMS.Persistence.Identity
