--- a/TMS.WebUI/Pages/Employees/Edit.cshtml
+++ b/TMS.WebUI/Pages/Employees/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="breadcrumbs">
-    <a href="/">Home</a> >
+    <a asp-page="../Index">Home</a> >
     <a asp-page="Index">Employees</a> >
     <span>@Model.Employee.FullName [Edit mode]</span>
 </div>
