--- a/TMS.WebUI/Pages/Employees/Index.cshtml
+++ b/TMS.WebUI/Pages/Employees/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="breadcrumbs">
-    <a href="/">Home</a> >
+    <a asp-page="../Index">Home</a> >
     <span>Employee list</span>
 </div>
 
