--- a/TMS.WebUI/Pages/Issues/Create.cshtml
+++ b/TMS.WebUI/Pages/Issues/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="breadcrumbs">
-    <a asp-controller="Home" asp-action="Index">Home</a> >
+    <a asp-page="../Index">Home</a> >
     <a asp-page="Index">Issues</a> >
     <span>Add issue</span>
 </div>
