--- a/TMS.WebUI/Pages/Issues/Edit.cshtml
+++ b/TMS.WebUI/Pages/Issues/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit issue";
 }
 <div class="breadcrumbs">
-    <a asp-controller="Home" asp-action="Index">Home</a> >
+    <a asp-page="../Index">Home</a> >
     <a asp-page="Index">Issues</a> >
     <span>@Model.Issue.Name [Edit mode]</span>
 </div>
