--- a/TMS.WebUI/Pages/Employees/Detailed.cshtml
+++ b/TMS.WebUI/Pages/Employees/Detailed.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="breadcrumbs">
-    <a href="/">Home</a> >
+    <a asp-page="../Index">Home</a> >
     <a asp-page="Index">Employees</a> >
     <span>@Model.Employee.FullName</span>
 </div>
