--- a/TMS.WebUI/Pages/Issues/Detailed.cshtml
+++ b/TMS.WebUI/Pages/Issues/Detailed.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="breadcrumbs">
-    <a asp-controller="Home" asp-action="Index">Home</a> >
+    <a asp-page="../Index">Home</a> >
     <a asp-page="Index">Issues</a> >
     <span>Issue details</span>
 </div>
