--- a/TMS.WebUI/Pages/Employees/Detailed.cshtml
+++ b/TMS.WebUI/Pages/Employees/Detailed.cshtml
@@ -15,13 +15,12 @@
 <div>Employee details</div>
 
 <table class="table">
-    <tr><td>ShortName</td><td>FullName</td><td>Role</td><td>Email</td><td>Active</td></tr>
+    <tr><td>ShortName</td><td>FullName</td><td>Role</td><td>Email</td></tr>
     <tr>
         <td>@Model.Employee.ShortName</td>
         <td>@Model.Employee.FullName</td>
         <td>@Model.Employee.RoleName</td>
         <td>@Model.Employee.Email</td>
-        <td>@Model.Employee.Active</td>
     </tr>
 </table>
 
