--- a/TMS.WebUI/Pages/Shared/_Layout.cshtml
+++ b/TMS.WebUI/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="logo" asp-controller="Home" asp-action="Index"></a>
+                <a class="logo" href="/"></a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                 </div>
